Added enhancement of fall of wickets

--- a/ESPN Cricket auto.ipynb
+++ b/ESPN Cricket auto.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -18,16 +18,16 @@
      "text": [
       "Requirement already satisfied: python-espncricinfo in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (0.5.8)\n",
       "Requirement already satisfied: bs4 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from python-espncricinfo) (0.0.1)\n",
-      "Requirement already satisfied: requests in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from python-espncricinfo) (2.24.0)\n",
       "Requirement already satisfied: dateparser in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from python-espncricinfo) (1.1.1)\n",
+      "Requirement already satisfied: requests in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from python-espncricinfo) (2.24.0)\n",
       "Requirement already satisfied: beautifulsoup4 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from bs4->python-espncricinfo) (4.8.0)\n",
-      "Requirement already satisfied: python-dateutil in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from dateparser->python-espncricinfo) (2.8.1)\n",
-      "Requirement already satisfied: tzlocal in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from dateparser->python-espncricinfo) (1.5.1)\n",
-      "Requirement already satisfied: regex!=2019.02.19,!=2021.8.27,<2022.3.15 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from dateparser->python-espncricinfo) (2020.6.8)\n",
       "Requirement already satisfied: pytz in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from dateparser->python-espncricinfo) (2020.1)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from requests->python-espncricinfo) (1.25.9)\n",
+      "Requirement already satisfied: tzlocal in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from dateparser->python-espncricinfo) (1.5.1)\n",
+      "Requirement already satisfied: python-dateutil in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from dateparser->python-espncricinfo) (2.8.1)\n",
+      "Requirement already satisfied: regex!=2019.02.19,!=2021.8.27,<2022.3.15 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from dateparser->python-espncricinfo) (2020.6.8)\n",
       "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from requests->python-espncricinfo) (3.0.4)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from requests->python-espncricinfo) (2020.6.20)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from requests->python-espncricinfo) (1.25.9)\n",
       "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from requests->python-espncricinfo) (2.10)\n",
       "Requirement already satisfied: soupsieve>=1.2 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from beautifulsoup4->bs4->python-espncricinfo) (2.0.1)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from python-dateutil->dateparser->python-espncricinfo) (1.12.0)\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,8 @@
     "from espncricinfo.exceptions import PlayerNotFoundError\n",
     "from datetime import datetime,date\n",
     "import os\n",
-    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "\n",
     "\n",
@@ -143,11 +144,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
     "def scorecard(index,table,m):\n",
+    "    \n",
     "    tableValues = []\n",
     "\n",
     "    for x in table[index].find_all('tr')[1:]:\n",
@@ -165,6 +167,19 @@
     "    df=pd.DataFrame(tableValues,columns=row_headers)\n",
     "    df.columns.values[1] ='CB'\n",
     "    df=df.drop(\"\\xa0\",axis=1,errors='ignore')\n",
+    "    df1=df.copy()\n",
+    "    #Fall of wickets\n",
+    "\n",
+    "    if df['BATTING'].str.contains(\"Fall of wickets\").any():  \n",
+    "\n",
+    "        FOW=df['BATTING'][df['BATTING'].str.contains(\"Fall of wickets\")==True].str.replace(\"Fall of wickets:\",\"\").str.replace(\":\",\",\").str.replace(\"(\",\",\").str.replace(\")\",\":\").str.replace(\":,\",\":\").str.split(\":\",expand=True).T\n",
+    "        FOW=FOW.iloc[:,0].str.split(\",\",expand=True).dropna(axis=0,how='any')\n",
+    "        FOW.columns=['FOW','Batsmen','At_Over']\n",
+    "        FOW['At_Over']=FOW['At_Over'].str.replace(\"ov\",\"\")\n",
+    "        FOW=FOW.replace(\" \",\"\").replace(\"*\",'')   \n",
+    "        FOW[\"FOW\"]=FOW[\"FOW\"].apply(lambda x: x.strip())  \n",
+    "\n",
+    "    #DId not bat data\n",
     "\n",
     "    if df['BATTING'].str.contains(\"Did not bat\").any():    \n",
     "\n",
@@ -176,11 +191,22 @@
     "        df_dnb['CB']=df_dnb['CB'].fillna('dnb')\n",
     "        df_dnb=df_dnb.fillna(0)\n",
     "        df=df_dnb\n",
+    "\n",
     "    else:\n",
     "        df=pd.DataFrame(tableValues,columns=row_headers).set_index('BATTING').dropna(axis=0,how='all')\n",
     "        df=df.iloc[0:df.index.get_indexer(['Extras'])[0]].reset_index().rename(columns={'\\xa0':'CB'})\n",
     "\n",
+    "    df['BATTING']=df['BATTING'].str.replace(\")\",\"\").str.replace(\"(\",\"-\").str.replace(\"-c\",\"\").replace(regex=True,to_replace=r'[^A-Z a-z .\\-]', value=r'')\n",
+    "\n",
     "    df['BATTING']=df['BATTING'].replace(regex=True,to_replace=r'[^A-Z a-z ().\\-]', value=r'')\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    if df1['BATTING'].str.contains(\"Fall of wickets\").any():\n",
+    "        df=pd.merge(df,FOW,left_on=\"BATTING\",right_on=\"Batsmen\",how=\"left\")\n",
+    "        df['FOW']=df['FOW'].fillna(df['CB'])\n",
+    "        \n",
+    "        \n",
     "\n",
     "    if len(df['CB'].replace(regex=True,to_replace=[\"c \",r'[^A-Z a-z (/ .\\-]'], value=r'').str.replace(\"(\",\"-\").str.split(\" b \",expand=True).columns)>1:\n",
     "\n",
@@ -258,6 +284,7 @@
     "\n",
     "    df=df.replace(' ', 'None')\n",
     "\n",
+    "\n",
     "    return df"
    ]
   },
@@ -287,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +383,7 @@
     "    \n",
     "    # AVoiding No result matches\n",
     "    \n",
-    "    if (result!=\"No result\") or (result!=\"Match Abandoned\"):    \n",
+    "    if (result!=\"No result\") and (result!=\"Match Abandoned\"):    \n",
     "        df1=scorecard(index=0,table=table,m=m)\n",
     "        df1['team']=team1_name\n",
     "        df1['BATTING']=df1['BATTING'].str.replace(\")\",\"\").str.replace(\"(\",\"-\").str.replace(\"-c\",\"\").replace(regex=True,to_replace=r'[^A-Z a-z .\\-]', value=r'')\n",
@@ -364,8 +391,8 @@
     "\n",
     "        df2=scorecard(index=1,table=table,m=m)\n",
     "        df2['team']=team2_name\n",
-    "        df2['BATTING']=df2['BATTING'].str.replace(\")\",\"\").str.replace(\"(\",\"-\").str.replace(\"-c\",\"\").replace(regex=True,to_replace=r'[^A-Z a-z .\\-]', value=r'')\n",
     "        df2['recent_no_of_days']=pd.to_datetime(df2['match_date']).apply(lambda x: (date.today()-x.date()).days)\n",
+    "        \n",
     "\n",
     "        # Concat both the scorecards\n",
     "\n",
@@ -422,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -489,10 +516,11 @@
     "    \n",
     "    #Create folder w.r.t year\n",
     "    \n",
-    "    path=input()\n",
+    "    path=r'C:\\Users\\hanish.chebrole\\Downloads\\ESPN_data\\{}_India_t20'.format(year)\n",
     "    \n",
     "    if os.path.exists(path):\n",
     "        None\n",
+    "        \n",
     "    else:\n",
     "        os.mkdir(path) \n",
     "    \n",
@@ -512,13 +540,6 @@
     "        \n",
     "    df_combined.to_csv(path+'\\df_combined_{}.csv'.format(year))     "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
