--- a/ESPN Cricket auto.ipynb
+++ b/ESPN Cricket auto.ipynb
@@ -9,37 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: python-espncricinfo in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (0.5.8)\n",
-      "Requirement already satisfied: bs4 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from python-espncricinfo) (0.0.1)\n",
-      "Requirement already satisfied: dateparser in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from python-espncricinfo) (1.1.1)\n",
-      "Requirement already satisfied: requests in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from python-espncricinfo) (2.24.0)\n",
-      "Requirement already satisfied: beautifulsoup4 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from bs4->python-espncricinfo) (4.8.0)\n",
-      "Requirement already satisfied: pytz in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from dateparser->python-espncricinfo) (2020.1)\n",
-      "Requirement already satisfied: tzlocal in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from dateparser->python-espncricinfo) (1.5.1)\n",
-      "Requirement already satisfied: python-dateutil in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from dateparser->python-espncricinfo) (2.8.1)\n",
-      "Requirement already satisfied: regex!=2019.02.19,!=2021.8.27,<2022.3.15 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from dateparser->python-espncricinfo) (2020.6.8)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from requests->python-espncricinfo) (3.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from requests->python-espncricinfo) (2020.6.20)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from requests->python-espncricinfo) (1.25.9)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from requests->python-espncricinfo) (2.10)\n",
-      "Requirement already satisfied: soupsieve>=1.2 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from beautifulsoup4->bs4->python-espncricinfo) (2.0.1)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from python-dateutil->dateparser->python-espncricinfo) (1.12.0)\n",
-      "Requirement already satisfied: bs4 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (0.0.1)\n",
-      "Requirement already satisfied: beautifulsoup4 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from bs4) (4.8.0)\n",
-      "Requirement already satisfied: soupsieve>=1.2 in c:\\users\\hanish.chebrole\\anaconda3\\lib\\site-packages (from beautifulsoup4->bs4) (2.0.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip3 install python-espncricinfo\n",
-    "!pip3 install bs4"
+    "# !pip3 install python-espncricinfo\n",
+    "# !pip3 install bs4"
    ]
   },
   {
@@ -51,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +267,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Impact list\n"
+    "# Impact Player\n",
+    "\n"
    ]
   },
   {
@@ -314,11 +290,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def impact_player(index,table):    \n",
+    "def metric(index,table):    \n",
     "    tableValues = []\n",
     "    for x in table[index].find_all('tr')[1:]:\n",
     "            td_tags = x.find_all('td')\n",
@@ -330,14 +306,16 @@
     "    for x in table[index].find_all('tr'):\n",
     "        for y in x.find_all('th'):\n",
     "            row_headers.append(y.text)\n",
+    "            \n",
+    "    df=pd.DataFrame(tableValues).dropna(axis=0,how='any').replace('',np.NaN).dropna(axis=1,how='all')\n",
+    "    df.columns=row_headers\n",
     "    \n",
-    "    df=pd.DataFrame(tableValues,columns=row_headers)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,12 +356,16 @@
     "    table=soup.find_all('table',{'class':'ci-scorecard-table'})\n",
     "    team1_name=str(soup.find_all('span',{'class':'ds-text-tight-l ds-font-bold ds-text-ui-typo hover:ds-text-ui-typo-primary ds-block ds-truncate'})[0]).replace(\">\",\"<\").split(\"<\")[2]\n",
     "    team2_name=str(soup.find_all('span',{'class':'ds-text-tight-l ds-font-bold ds-text-ui-typo hover:ds-text-ui-typo-primary ds-block ds-truncate'})[1]).replace(\">\",\"<\").split(\"<\")[2]\n",
+    "    bowling_table=soup.find_all('table',{'class':'ds-w-full ds-table ds-table-md ds-table-auto'})\n",
     "    \n",
     "    result=str(soup.find_all('p',{'class':'ds-text-tight-m ds-font-regular ds-truncate ds-text-typo-title'})[0]).replace(\">\",\"<\").split(\"<\")[4]\n",
     "    \n",
-    "    # AVoiding No result matches\n",
+    "    # AVoiding No result matches (result!=\"No result\") and (result!=\"Match Abandoned\")\n",
     "    \n",
-    "    if (result!=\"No result\") and (result!=\"Match Abandoned\"):    \n",
+    "    if (len(table)==2) and (len(bowling_table)==2):\n",
+    "        \n",
+    "        # Batting Score card\n",
+    "        \n",
     "        df1=scorecard(index=0,table=table,m=m)\n",
     "        df1['team']=team1_name\n",
     "        df1['BATTING']=df1['BATTING'].str.replace(\")\",\"\").str.replace(\"(\",\"-\").str.replace(\"-c\",\"\").replace(regex=True,to_replace=r'[^A-Z a-z .\\-]', value=r'')\n",
@@ -393,11 +375,29 @@
     "        df2['team']=team2_name\n",
     "        df2['recent_no_of_days']=pd.to_datetime(df2['match_date']).apply(lambda x: (date.today()-x.date()).days)\n",
     "        \n",
+    "        # Concat both the batting scorecards\n",
     "\n",
-    "        # Concat both the scorecards\n",
+    "        batting_all=pd.concat([df1,df2],axis=0).reset_index().drop(['index'],axis=1).replace(np.NaN,\"None\")\n",
+    "        batting_all['BATTING']=batting_all['BATTING'].apply(lambda x:\" \".join(x.split()))\n",
+    "        \n",
+    "        #Bowling Score card\n",
+    "        \n",
+    "        Bowling1=metric(index=0,table=bowling_table)\n",
+    "        Bowling1=Bowling1.dropna(axis=0,how=\"any\")\n",
+    "        \n",
+    "        Bowling2=metric(index=1,table=bowling_table)\n",
+    "        Bowling2=Bowling2.dropna(axis=0,how=\"any\")\n",
+    "        \n",
+    "        # Concat both the bowling scorecards\n",
     "\n",
-    "        scorecard_all=pd.concat([df1,df2],axis=0).reset_index().drop(['index'],axis=1).replace(np.NaN,\"None\")\n",
-    "        scorecard_all['BATTING']=scorecard_all['BATTING'].apply(lambda x:\" \".join(x.split()))\n",
+    "        Bowling_all=pd.concat([Bowling1,Bowling2],axis=0).reset_index().drop(['index'],axis=1).replace(np.NaN,\"None\")\n",
+    "        Bowling_all['BOWLING']=Bowling_all['BOWLING'].apply(lambda x:\" \".join(x.split()))   \n",
+    "        Bowling_all.columns=['BOWLING','Overs','Maidens','Runs','Wickets','ECON','Dots','fours','sixes','WD','NB']\n",
+    "        \n",
+    "        \n",
+    "        scorecard_all=pd.merge(batting_all,Bowling_all,left_on=\"BATTING\",right_on=\"BOWLING\",how=\"left\")\n",
+    "\n",
+    "        \n",
     "        # Players info\n",
     "\n",
     "        ### Team-1\n",
@@ -424,11 +424,11 @@
     "\n",
     "        web = requests.get(\"https://www.espncricinfo.com/series/{}/{}-{}/match-impact-player\".format(series_name,name,match_id))\n",
     "        soup = bs(web.content,\"html.parser\")\n",
-    "        table=soup.find_all('table',{'class':'ds-w-full ds-table ds-table-md ds-table-auto'})\n",
+    "        table_impact=soup.find_all('table',{'class':'ds-w-full ds-table ds-table-md ds-table-auto'})\n",
     "\n",
-    "        if len(table)>0:\n",
+    "        if len(table_impact)>0:\n",
     "\n",
-    "            impact_df=impact_player(index=0,table=table)\n",
+    "            impact_df=metric(index=0,table=table_impact)\n",
     "\n",
     "            # Merge all the data\n",
     "            data_final=pd.merge(players_info,scorecard_all,how=\"left\",right_on=\"BATTING\",left_on=\"known_as\").merge(impact_df,left_on=\"known_as\",right_on=\"PLAYER\",how=\"left\")\n",
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
     "    \n",
     "    #Create folder w.r.t year\n",
     "    \n",
-    "    path=r'C:\\Users\\hanish.chebrole\\Downloads\\ESPN_data\\{}_India_t20'.format(year)\n",
+    "    path=path.format(year)\n",
     "    \n",
     "    if os.path.exists(path):\n",
     "        None\n",
