--- a/ESPN Cricket auto.ipynb
+++ b/ESPN Cricket auto.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,11 +392,11 @@
     "\n",
     "        Bowling_all=pd.concat([Bowling1,Bowling2],axis=0).reset_index().drop(['index'],axis=1).replace(np.NaN,\"None\")\n",
     "        Bowling_all['BOWLING']=Bowling_all['BOWLING'].apply(lambda x:\" \".join(x.split()))   \n",
-    "        Bowling_all.columns=['BOWLING','Overs','Maidens','Runs','Wickets','ECON','Dots','fours','sixes','WD','NB']\n",
+    "        Bowling_all.columns=['BOWLING','Overs','Maidens','Bowling_Runs','Wickets','ECON','Dots','fours','sixes','WD','NB']\n",
     "        \n",
     "        \n",
     "        scorecard_all=pd.merge(batting_all,Bowling_all,left_on=\"BATTING\",right_on=\"BOWLING\",how=\"left\")\n",
-    "\n",
+    "        \n",
     "        \n",
     "        # Players info\n",
     "\n",
@@ -429,7 +429,8 @@
     "        if len(table_impact)>0:\n",
     "\n",
     "            impact_df=metric(index=0,table=table_impact)\n",
-    "\n",
+    "            impact_df.columns=['PLAYER','Team','TI','Runs(Balls)','I.Runs','Bowl','I.Wkts']\n",
+    "            \n",
     "            # Merge all the data\n",
     "            data_final=pd.merge(players_info,scorecard_all,how=\"left\",right_on=\"BATTING\",left_on=\"known_as\").merge(impact_df,left_on=\"known_as\",right_on=\"PLAYER\",how=\"left\")\n",
     "            data_final['match_id']=match_id\n",
@@ -449,29 +450,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1243388\n",
-      "1243389\n",
-      "1243390\n",
-      "1243391\n",
-      "1243392\n",
-      "1262758\n",
-      "1262759\n",
-      "1262760\n",
-      "1273727\n",
-      "1273739\n",
-      "1273744\n",
-      "1273748\n",
-      "1273753\n",
-      "1278671\n",
-      "1278672\n",
-      "1278673\n",
       "1278679\n",
       "1278680\n",
       "1278681\n",
@@ -503,7 +488,8 @@
       "1327505\n",
       "1327506\n",
       "1327507\n",
-      "1327508\n"
+      "1327508\n",
+      "2022 Year Ended\n"
      ]
     }
    ],
@@ -516,7 +502,7 @@
     "    \n",
     "    #Create folder w.r.t year\n",
     "    \n",
-    "    path=path.format(year)\n",
+    "    path=path\n",
     "    \n",
     "    if os.path.exists(path):\n",
     "        None\n",
@@ -538,8 +524,16 @@
     "        \n",
     "        df_combined=pd.concat([data_final,df_combined],axis=0).reset_index().drop(\"index\",axis=1)\n",
     "        \n",
-    "    df_combined.to_csv(path+'\\df_combined_{}.csv'.format(year))     "
+    "    df_combined.to_csv(path+'\\df_combined_{}.csv'.format(year))\n",
+    "    print(\"{} Year Ended\".format(year))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
